Fixed responsiveness, added new SVG and aligned icons #13

--- a/style.css
+++ b/style.css
@@ -224,6 +224,11 @@ a {
   align-items: center;
 }
 
+.medias a {
+  display: flex;
+  align-items: center;
+}
+
 @media (max-width: 399px) {
   .content-container {
     height: auto;
@@ -300,7 +305,7 @@ a {
   }
 }
 
-@media (max-height: 900px) {
+@media (max-height: 950px) {
   footer {
     position: relative;
   }
@@ -312,9 +317,14 @@ a {
   }
 }
 
-/* 
-@media (max-height: 945px) {
-  body {
-    height: auto;
+@media (max-width: 1406px) and (max-height: 1190px) {
+  footer {
+    position: relative;
   }
-} */
+}
+
+@media (max-width: 450px) {
+  .social-link {
+    display: none;
+  }
+}
